# esp-supla-firmware

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
boards/: Kconfig.projbuild  board_esp-01-dimmer-v1.0.c  board_esp-01-dimmer-v1.1.c  board_esp-01-rgbw.c  board_esp-01-usb.c
boards/include/: board.h
components/bsp/: CMakeLists.txt
components/device/: CMakeLists.txt  device.c
components/esp-http-server-utils/: esp_http_server_fota.c  esp_http_server_wifi.c
components/esp-tuya-mcu/: esp-tuya-mcu.c
components/exp-input/: exp-input.c
components/lampsmart-ble/: CMakeLists.txt  README.md  idf_component.yml
components/settings/: CMakeLists.txt  settings.c
components/supla-actuators/: ledc-channel.c  relay-channel.c  rgbw-channel.c
components/supla-inputs/: CMakeLists.txt  binary-sensor.c  click-input.c  exp-input.c  generic-input.c
components/supla-outputs/: CMakeLists.txt  ext-rgbw-channel.c  lampsmart-ble-channel.c  ledc-channel.c  ledsmart-ble-channel.c  pca9632-rgbw-channel.c  relay-channel.c  rgbw-channel.c  rs-channel.c  rs-mp46-channel.c  status-led.c
components/supla-sensors/: CMakeLists.txt  click-input.c  dht-sensor.c  pir-sensor.c
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  compress_webdata.sh  device.c  device.h  main.c  webserver.c  webserver.h  wifi.c  wifi.h
main/bsp/: board.h  board_esp-01-dimmer-v1.0.c  board_esp-01-dimmer-v1.1.c  board_esp-01-dimmer.c  board_esp-01-plug.c  board_esp-01-rgbw.c  board_esp-01-usb.c
main/srv/: index.html  script.js  supla.css
(+102 files in other folders)
